Improve logging in TestContextManager